--- a/css/main.css
+++ b/css/main.css
@@ -83,26 +83,87 @@ textarea {
   resize: vertical;
 }
 
+
+
+
+
+
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
 /* General Styles === Mobile first */
 
-body {
+html {
   font-size: 16px;
+}
+
+body {
+  font-family: 'Karla', sans-serif;
+
+}
+
+header {
   
+}
+
+nav {
+  font-size: 1.25em;
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  font-weight: 100;
+}
+
+li a {
+  text-decoration: none;
 }
 
 h1 {
-  
-  font-size: 3.25em;
+  font-size: 4em;
+  font-family: 'Prata', serif;
 }
 
 h2 {
-  
   font-size: 2.25em;
+  font-weight: 100;
 }
+
+h2 span {
+  font-weight: 400;
+}
+
+h3 {
+  font-weight: 100;
+  font-size: 3em;
+}
+
+h4 {
+  font-size: 2em;
+}
+
+p {
+  font-weight: ;
+}
+
+p span {
+  
+}
+
+img {
+  
+}
+
+
+
+
 
 
 /* ==========================================================================
