--- a/css/main.css
+++ b/css/main.css
@@ -191,11 +191,12 @@ nav li a {
 
 a:hover {
   color: #ffe8d6;
-  text-shadow:0px 0px 30px #ffe8d6;
+  text-shadow:0px 0px 40px #ffe8d6;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
+  cursor: pointer;
 }
 
 /* The sticky class - add JS when it reaches its scroll position */
