Updates to skills and html tags

--- a/css/main.css
+++ b/css/main.css
@@ -351,10 +351,10 @@ section p {
 
 section h3 {
   margin-bottom: 0;
+  margin-top: 30px;
 }
 
 .skills ul {
-  background: #e9b14c;
   color: #453e4f;
   padding: 0 1em 2em 1em;
   line-height: 2.5em;
@@ -369,15 +369,17 @@ section h3 {
   padding-inline-start: 1px;
   padding-inline-end: 10px;
   margin-inline-start: 10px;
+  padding-right: 10px;
 }
 
-#additional {
+#additional-skills {
   background-color: #ffe8d6;
   color: #453e4f;
   line-height: 2em;
-  padding: 0 60px;
-  margin-bottom: 50px;
-}
+  margin-bottom: 20px;
+  margin-right: 10px;
+  padding-left: 20px; 
+} 
 
 /* about section */
 
@@ -396,7 +398,6 @@ section h3 {
 }
 
 #portrait {
-  
   padding: 0;
   margin: 0;
   width: auto;
@@ -404,9 +405,15 @@ section h3 {
 
 .about-section h4 {
   font-family: 'Karla', sans-serif;
+  font-size: 1.5em;
   font-weight: 400;
   text-align: left;
   margin: 40px 60px 20px 60px;
+}
+
+.about-section span {
+  font-family: 'Domine', serif;
+  color: #ffe8d6;
 }
 
 .about-section p {
@@ -648,15 +655,14 @@ footer .social-icons i {
 
     /* skills section */
 
-    #additional {
+    /* #additional {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
       flex-flow: row wrap; 
-      /* padding: 0 2em 1em 2em; */
       line-height: 2.5em;
-      /* width: 90%; */
-    }
+      padding: 0;
+    } */
 
     /* about section */
 
@@ -670,6 +676,14 @@ footer .social-icons i {
       display: flex;
       flex-direction: column;
       padding-top: 50px;
+    }
+
+    #text {
+      /* translated hex cream #ffe8d6 to rgba */
+      background-color: rgba(255,232,214,.25);
+      padding-bottom: 40px;
+      margin-left: 50px;
+      margin-right: 50px;
     }
 
     #portrait {
@@ -707,7 +721,7 @@ footer .social-icons i {
   /* about section */
 
   #about h4 {
-    font-size: 1.75em;
+    font-size: 1.25em;
     width: 60%;
   }
 
