Update to About section text

--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,7 @@ section h3 {
   font-family: 'Bellota', cursive;
   /* font-family: 'Domine', serif; */
   color: #ffe8d6;
+  font-size: 1.15em;
 }
 
 .about-section p {
