--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,19 @@ div .portfolio-skills {
   touch-action: none; 
 }
 
-.button-52 {
+/* a::before {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a::after {
+  text-decoration: none;
+} */
+
+.link {
   color: #453e4f;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -322,9 +334,11 @@ div .portfolio-skills {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  text-decoration: none;
 }
 
-.button-52:after {
+.link:after {
+  color: #453e4f;
   content: "";
   background-color: white;
   border-radius: 5px;
@@ -335,11 +349,18 @@ div .portfolio-skills {
   top: 7px;
   left: 7px;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.button-52:hover:after {
+.link:hover {
+  color: #453e4f;
+}
+
+.link:hover:after {
+  color: #453e4f;
   top: 0px;
   left: 0px;
+  text-decoration: none;
 }
 
 /* skills section */
@@ -370,6 +391,7 @@ section h3 {
   padding-inline-end: 10px;
   margin-inline-start: 10px;
   padding-right: 15px;
+  list-style-type: circle;
 }
 
 #additional-skills {
